--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="formContainer">
                 <h2 class="marginBottomForm">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
                 <P class="marginBottomForm">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte.</P>
-                <form action="https://gmail.us7.list-manage.com/subscribe/post?u=100dfd105d09f2427cce8796d&amp;id=c763e29d57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <input id="name" name="FNAME" placeholder="Seu nome" type="text">
-                    <input id="email" name="EMAIL" placeholder="Seu melhor email" type="text">
+                <form action="https://gmail.us7.list-manage.com/subscribe/post?u=100dfd105d09f2427cce8796d&amp;id=c763e29d57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                    <input id="name" name="FNAME" placeholder="Seu nome" type="text" required>
+                    <input id="email" name="EMAIL" placeholder="Seu melhor email" type="text" required>
                     <select name="PLACE" id="place">
                         <option value="rj">Rio de Janeiro</option>
                         <option value="sp">São Paulo</option>
@@ -42,36 +42,3 @@
     </div>
 </body>
 </html>
-
-
-
-<!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-    <form action="https://gmail.us7.list-manage.com/subscribe/post?u=100dfd105d09f2427cce8796d&amp;id=c763e29d57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-        <h2>Subscribe</h2>
-    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-    <div class="mc-field-group">
-        <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-    </label>
-        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-    </div>
-    <div class="mc-field-group">
-        <label for="mce-FNAME">First Name </label>
-        <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-    </div>
-    <div class="mc-field-group">
-        <label for="mce-PLACE">Place </label>
-        <input type="text" value="" name="PLACE" class="" id="mce-PLACE">
-    </div>
-        <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
-        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_100dfd105d09f2427cce8796d_c763e29d57" tabindex="-1" value=""></div>
-        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-        </div>
-    </form>
-    </div>
-    
-    <!--End mc_embed_signup-->
