style and functions added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <h1>Churrascômetro</h1>
             <input id="adults" name="adults" type="number" placeholder="Adultos" >
             <input id="kids" name="kids" type="number" placeholder="Crianças" >
-            <input id="duration" name="duration" type="number" placeholder="Duração (h)" >
-            <button>Calcular</button>
+            <input id="duration" name="duration" type="number" placeholder="Duração (h)">
+            <button onclick="calculate()">Calcular</button>
             
             <section id="result">
                 
