--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <title>Memória</title>
 </head>
 <body>
-    <div class="card" data-icon="bootstrap">
-        <div class="card_front">
-            <img src="assets/images/bootstrap.png" alt="">
-        </div>
-        <div class="card_back">
-            &lt/&gt
-        </div>
+    <div id="gameBoard">
+        
     </div>
-    <script src="./assets/scripts/"></script>
+
+    <div id="plays">
+        Jogadas:<span>0</span>
+    </div>
+
+    <div id="gameOver">
+        <div>Parabéns, você completou o jogo!</div>
+        <button id="restart" onclick="restart()">Jogar novamente</button>
+    </div>
+    <script src="./assets/scripts/game.js"></script>
+    <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
