fixes in login and styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section id="loginSect" style="height: 100vh; display: flex; flex-direction: column; justify-content: space-around;">
+    <section id="loginSect" style="border-radius: 0; height: 100vh; display: flex; flex-direction: column; justify-content: space-around;">
         <h1>LOGIN</h1>
         <input id="name" style="width: 20%; height: 5%; font-size: 2rem;" placeholder="Nome" type="text">
         <input id="passwd" oninput="login()" style="width: 20%; height: 5%; font-size: 2rem;" placeholder="Senha" type="password">
