Troca de icones

--- a/index.html
+++ b/index.html
@@ -30,19 +30,18 @@
                 placeholder="Aqui vai aparece o texto decodificado corno"></textarea>
             <span>
                 <button class="copyButton" onclick="copy('encodeResult')" style="transform: scaleX(-1);"><img
-                        src="https://img.icons8.com/ios/452/grab.png" style="filter: invert(1);" alt=""></button></span>
+                        src="https://image.flaticon.com/icons/png/512/88/88026.png" style="filter: invert(1);" alt=""></button></span>
         </section>
         <section id="section2">
-            <span>
-                <button class="copyButton" onclick="paste('decode')"><img
-                        src="https://static.thenounproject.com/png/80176-200.png" alt=""></button>
-            </span>
             <textarea name="" id="decode" cols="25" rows="5" oninput="decode()"
                 placeholder="Escreve o texto pra decodificar ai o corno"></textarea>
             <h2>==></h2>
             <textarea name="" id="decodeResult" readonly cols="25" rows="5"
                 placeholder="Aqui vai aparece o texto codificado corno"></textarea>
-
+                <span>
+                    <button class="copyButton" onclick="paste('decode')"><img
+                            src="https://cdn4.iconfinder.com/data/icons/software-menu-icons/256/SoftwareIcons-59-512.png" alt=""></button>
+                </span>
         </section>
         <img src="pp.jpeg" style="width: 80%; margin: 0 auto;" alt="">
     </main>
